--- a/tapsiriq_1.html
+++ b/tapsiriq_1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body bgcolor=skyblue>
-    <h1><p align="center" style="color: blue;">Azərbaycan Respublikasının Dövlət rəmzləri</p></h1><br><br>
+    <h1 align="center" style="color: blue;">Azərbaycan Respublikasının Dövlət rəmzləri</h1><br><br>
     <p>
         <b>Azərbaycan Respublikasının rəsmi simvollarından biri Bayraq ilk dəfə 9 noyabr 1918-ci ildə <br>
          Azərbaycan Xalq  Cümhuriyyəti Nazirlər Şurası tərəfindən təsdiq edilmişdir.<br></b> 
