--- a/tapsiriq_1.html
+++ b/tapsiriq_1.html
@@ -3,8 +3,8 @@
 <head>
     <title>Azərbaycan Respublikasının Dövlət rəmzləri</title>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Şəhid,Şəhidlər,Azərbaycan Şəhidləri,İkinci Qarabağ Şəhidləri,   Şəhidləri">
-    <meta name="description" content="Azərbaycan şəhidlərindən olan .....">
+    <meta name="keywords" content="Azərbaycan,Azərbaycan Respublikasının Dövlət rəmzləri,rəmzlər,Bayraq,Gerb,Himni">
+    <meta name="description" content="Azərbaycan Respublikasının Dövlət rəmzləri hakkında məlumat">
     <meta name="author" content="Əhmədov Fəxrəddin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
